WS_INTEGRATION/force-app/main/default/objects/Invention_Junction__c/Invention_Junction__c.object-meta.xml
<CustomObject>
    <description>Connects Inventions to Accounts, Contacts, and Divisions</description>
    <label>Invention Junction</label>
    <nameField>
        <label>Invention Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invention Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>