WS_INTEGRATION/force-app/main/default/objects/Invention_Junction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventions</relationshipLabel>
    <relationshipName>Inventions</relationshipName>
    <type>Lookup</type>
</CustomField>