WS_INTEGRATION/force-app/main/default/objects/Invention_Junction__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Inventions</relationshipLabel>
    <relationshipName>Division</relationshipName>
    <type>Lookup</type>
</CustomField>