WS_INTEGRATION/force-app/main/default/objects/Invention_Junction__c/fields/Initial_Contact_Department__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Department__c</fullName>
    <description>Generated by a workflow. This is the value when the record was initially created.</description>
    <label>Initial Contact Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>