WS_INTEGRATION/force-app/main/default/objects/Invention_Junction__c/fields/Initial_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Name__c</fullName>
    <description>Filled in by a workflow. This is the value when the junction object was initially created.</description>
    <label>Initial Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>