WS_INTEGRATION/force-app/main/default/objects/Invention_Junction__c/fields/Invention_Track_Code__c.field-meta.xml
<CustomField>
    <fullName>Invention_Track_Code__c</fullName>
    <description>Pulls the Track Code from the Invention</description>
    <formula>Invention__r.Name</formula>
    <inlineHelpText>Auto Updated from invention</inlineHelpText>
    <label>Invention Track Code</label>
    <type>Text</type>
</CustomField>