WS_INTEGRATION/force-app/main/default/objects/Invention_Junction__c/fields/Primary_Researcher__c.field-meta.xml
<CustomField>
    <fullName>Primary_Researcher__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Primary Investigator for the Invention</inlineHelpText>
    <label>Primary Researcher</label>
    <type>Checkbox</type>
</CustomField>