WS_INTEGRATION/force-app/main/default/objects/Invention_Junction__c/validationRules/Require_Account_or_Division.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_or_Division</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Division__c ), ISBLANK( Account__c ) )</errorConditionFormula>
    <errorMessage>There must be an associated Division or and Account.</errorMessage>
</ValidationRule>